# pydantic-schema-sync

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: sync_model.py  sync_model_cli.py  sync_model_from_path.py
src/pydantic_schema_sync/: cli.py
tests/: sync_examples_test.py
