[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[tool.uv.sources]
pydantic-schema-sync = {workspace = true}
pytest-pydantic-schema-sync = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/pydantic-schema-sync",
  "packages/pytest-pydantic-schema-sync",
  "packages/demo-test-package"
]
